# PGL-Clean

./: .gitignore  LICENSE.txt  README.md  ai_usage_logs_backup.csv_20250510_101048  ai_usage_tracker.py  airtable_service.py  angles.py  anthropic_service.py  data_processor.py  determine_fit.py  determine_fit_optimized.py  external_api_service.py  fetch_episodes.py  forward_instantly_emails.py  gemini_service.py  generate_ai_usage_report.py  google_docs_service.py  instantly_email_sent.py  instantly_leads_db.py  instantly_to_attio.py  instantly_webhook_processor.py  main.py  main_fastapi.py  media_manager_db.py  mipr_podcast.py  openai_service.py  pitch_episode_selection.py  pitch_episode_selection_optimized.py  pitch_writer.py  pitch_writer_optimized.py  podcast_note_transcriber.py  processed_instantly_to_attio_ids.txt  pyproject.toml  requirements.txt  schema_creation_extended.py  send_pitch_to_instantly.py  summary_guest_identification.py  summary_guest_identification_optimized.py  task_manager.py  temp_backup_script.py  (+3 more)
docs/: AI_USAGE_TRACKING.md  document_access_findings.md  script_optimization_guide.txt
prompts/: genre_id_prompt.txt  prompt_convert_to_json.txt  prompt_determine_good_fit.txt  prompt_extract_json.txt  prompt_podcast_analysis_combined.txt  prompt_podcast_host_guest_analysis.txt  prompt_podcast_transcript_analysis.txt  prompt_validate_host_guest_labeling.txt
src/: ai_usage_tracker.py  airtable_service.py  angles.py  anthropic_service.py  attio_email_sent.py  attio_response.py  attio_service.py  auth_middleware.py  batch_podcast_fetcher.py  campaign_status_tracker.py  config.py  create_history_table.py  data_processor.py  db_utils.py  determine_fit_optimized.py  external_api_service.py  fetch_episodes.py  file_manipulation.py  free_tier_episode_transcriber.py  gemini_search.py  gemini_service.py  generate_ai_usage_report.py  google_docs_service.py  google_sheets_service.py  instantly_email_sent.py  instantly_lead_deleter.py  instantly_leads_db.py  instantly_response.py  main_fastapi.py  mipr_podcast.py  openai_service.py  phillip_approved.py  pitch_episode_selection_optimized.py  pitch_writer_optimized.py  podcast_note_transcriber.py  send_pitch_to_instantly.py  slack_service.py  summary_guest_identification_optimized.py  test_transcription.py  webhook_handler.py
static/: dashboard.css  dashboard.js  styles.css
templates/: admin_dashboard.html  index.html  llm_test_dashboard.html  login.html  podcast_cost.html
test_scripts/: test_ai_usage_tracker.py  test_determine_fit.py  test_pitch_episode_selection.py  test_pitch_writer.py  test_runner.py  test_summary_guest_identification.py
tests/: test_2_gemini_search.py  test_angles.py  (+10 more)
(+18 files in other folders)
