[tool.poetry]
name = "pgl-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Proprietary"  # Assuming based on LICENSE.txt not being a common open source one
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"  # Assuming Python 3.9+ compatibility, adjust if needed
anthropic = "^0.49.0"  # Aligning with installed version
Flask = "==3.1.0"
google-api-python-client = "^2.155.0"  # Keep broad if compatible, installed is 2.155.0
openai = "^1.69.0"  # Aligning with installed version
protobuf = "^5.29.4"  # Aligning with installed version
pyairtable = "==2.3.6"  # Aligning with installed version
pydantic = "^2.10.4"  # Keep broad if compatible, installed is 2.10.4, but pip list shows 2.10.4 + pydantic_core 2.27.2
python-dotenv = "^1.0.1"  # Aligning with installed version
Requests = "==2.32.3"
google-auth = "^2.38.0"  # Aligning with installed version
fastapi = "^0.115.11"  # Aligning with installed version
uvicorn = "^0.34.0"  # Aligning with installed version
tabulate = "==0.9.0"  # Aligning with installed version
google-auth-oauthlib = "^1.2.1"  # Aligning with installed version
google-auth-httplib2 = "^0.2.0"  # Aligning with installed version
google-generativeai = "^0.8.5"  # Aligning with installed version
pandas = "^2.2.3"  # Aligning with installed version
jinja2 = "^3.1.6"  # Aligning with installed version
tiktoken = "^0.9.0"  # Aligning with installed version
langchain-anthropic = "^0.3.10"  # Aligning with installed version
langchain-google-genai = "^2.1.1"  # Aligning with installed version
langchain-openai = "^0.3.11"  # Aligning with installed version
pydub = "^0.25.1"  # Aligning with installed version
starlette = "^0.46.1"  # Aligning with installed version
langchain-text-splitters = "^0.3.7"  # Aligning with installed version
sentence-transformers = "^2.7.0"  # Keep broad if compatible, installed is 2.7.0
backoff = "==2.2.1"  # Aligning with installed version
psycopg2-binary = "==2.9.10"  # Aligning with installed version
pydantic-core = "==2.27.2"  # Add pydantic-core as it's a direct dependency shown in pip list
requests-toolbelt = "==1.0.0"  # Add requests-toolbelt from pip list
MarkupSafe = "==2.1.3"  # Add MarkupSafe from pip list (Jinja2 dependency)
# Add other core dependencies that might be implicitly used but good to list
httpx = "^0.27.0"  # Often used with FastAPI, installed version is 0.28.1
httpcore = "^1.0.4"  # Often used with httpx, installed version is 1.0.7

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 